# sigma-racer

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-sidearm.yml
cluster/: Cargo.toml
efi/: Cargo.toml
efi/.cargo/: config.toml
efi/tools/dl2mdf/: Cargo.toml
efi/tools/dl2mdf/src/: main.rs
sidearm/: Cargo.toml
sidearm/.cargo/: config.toml
sidearm/scripts/: package-deb.sh
telemetry/: Cargo.toml
telemetry/src/: lib.rs
telemetry/src/client/: mod.rs  query.rs  tcp_reader.rs
telemetry/src/maintenance/: log.rs  mod.rs  report.rs  schedule.rs
telemetry/src/protocol/: constants.rs  message.rs  mod.rs
telemetry/src/relay/: mod.rs
telemetry/tests/: database_pull.rs
vehicle/: Cargo.toml
vehicle/src/: db.rs  main.rs  query.rs
